<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btmAccdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/date"
                android:textSize="15dp" />

            <ImageButton
                android:id="@+id/btmAccclosedt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="20dp"
                android:background="@color/transparent"
                android:src="@drawable/close" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative2">

            <TextView
                android:id="@+id/txtAccfromdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/fr_date" />

            <TextView
                android:id="@+id/txtAccTodt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/to_date" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txtAccfrdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date_format_hint" />

            <ImageView
                android:id="@+id/datepicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtAccfrdate"
                android:src="@drawable/calender" />

            <TextView
                android:id="@+id/txtAcctodate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/datepicker2"
                android:hint="@string/date_format_hint" />

            <ImageView
                android:id="@+id/datepicker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/calender" />

        </RelativeLayout>


        <RadioButton
            android:id="@+id/rdAccmonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative4"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/this_month"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/rdAccmdays30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rdAccmonth"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/last_30"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/rdAccmdays90"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rdAccmdays30"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/last_90"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rdAccmdays90"
            android:layout_margin="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Accbtmclear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/clear_all"
                android:textColor="?attr/colorOnSurface"/>

            <Button
                android:id="@+id/Accbtmapply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/apply"
                android:textColor="?attr/colorSurface" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>