<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    tools:context=".activity.share.ShareQR">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/et_acc_no"
            android:textColor="?attr/colorOnSurface"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_accno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:hint="@string/account_number"
            android:inputType="number" />

        <Button
            android:id="@+id/idBtnGenerateQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:layout_marginEnd="20dp"
            android:text="@string/generate_qr"
            android:textColor="?attr/colorSurface" />


        <ImageView
            android:id="@+id/idIVQrcode"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnshare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:layout_marginEnd="20dp"
                android:text="@string/share_qr"
                android:textColor="?attr/colorSurface" />

            <Button
                android:id="@+id/btnsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:layout_marginEnd="20dp"
                android:text="@string/save"
                android:textColor="?attr/colorSurface" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>